Remove active overlay on first game

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="app">
 	<h1>Welcome to Arcade Launcher</h1>
 	<div class="game-list">
-		<div tabindex="0" class="game-card spacevoyage active">
+		<div tabindex="0" class="game-card spacevoyage">
 			<div id="spacevoyage" class="game-image">
 				<div class="game-title">Space Voyage</div>
 				<div class="play-btn"></div>
