--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Arcade Launcher</title>
+	<title>Axis Launcher</title>
 	<link rel="stylesheet" href="styles.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,7 @@
 <body>
 <div id="loadingOverlay" class="hidden">Loading</div>
 <div class="app">
-	<h1>Welcome to Arcade Launcher</h1>
+	<h1>Welcome to Axis Launcher</h1>
 	<div class="game-list">
 		<div tabindex="0" class="game-card spacevoyage">
 			<div id="spacevoyage" class="game-image">
